Fixed anchor jump. Added live-server.

--- a/src/stylesheet.scss
+++ b/src/stylesheet.scss
@@ -110,6 +110,14 @@ li {
 	padding: 5px 0px;
 }
 
+*[id]::before {
+	content: " ";
+	display: block;
+	height: $header-height + 10px;
+	margin-top: -($header-height + 10px);
+	visibility: hidden;
+}
+
 body > header {
 	position: fixed;
 	top: 0px;
